more tidy up around tests and depedencies