@@ -1,20 +1,27 @@
 package com.tramchester.unit.geo;
 
-import com.tramchester.ComponentContainer;
-import com.tramchester.ComponentsBuilder;
+import com.tramchester.config.TramchesterConfig;
 import com.tramchester.domain.places.Station;
 import com.tramchester.domain.reference.TransportMode;
+import com.tramchester.domain.time.ProvidesLocalNow;
+import com.tramchester.domain.time.ProvidesNow;
 import com.tramchester.geo.MarginInMeters;
 import com.tramchester.geo.StationLocations;
+import com.tramchester.graph.filters.GraphFilter;
+import com.tramchester.graph.filters.IncludeAllFilter;
+import com.tramchester.mappers.Geography;
 import com.tramchester.repository.StationGroupsRepository;
-import com.tramchester.repository.TransportData;
+import com.tramchester.repository.naptan.NaptanRepository;
+import com.tramchester.repository.nptg.NPTGRepository;
 import com.tramchester.testSupport.TestEnv;
-import com.tramchester.testSupport.UnitTestOfGraphConfig;
 import com.tramchester.testSupport.reference.TramTransportDataForTestFactory;
-import com.tramchester.unit.graph.calculation.SimpleGroupedGraphConfig;
-import org.junit.jupiter.api.*;
+import org.easymock.EasyMock;
+import org.easymock.EasyMockSupport;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
 import java.util.EnumSet;
 import java.util.List;
 
@@ -22,40 +29,36 @@ import static com.tramchester.testSupport.reference.KnownLocations.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class StationLocationsFromTestDataTest {
+public class StationLocationsFromTestDataTest extends EasyMockSupport {
 
-    private static ComponentContainer componentContainer;
-    private static UnitTestOfGraphConfig config;
+    private static TramchesterConfig config;
     private static EnumSet<TransportMode> modes;
     private TramTransportDataForTestFactory.TramTransportDataForTest transportData;
     private StationLocations stationLocations;
     private StationGroupsRepository compositeStationRepository;
 
     @BeforeAll
-    static void onceBeforeAllTestRuns() throws IOException {
-        config = new SimpleGroupedGraphConfig(TestEnv.getDefaultDBTYpe());
-        TestEnv.deleteDBIfPresent(config);
-
-        componentContainer = new ComponentsBuilder().
-                overrideProvider(TramTransportDataForTestFactory.class).
-                create(config, TestEnv.NoopRegisterMetrics());
-        componentContainer.initialise();
-
+    static void onceBeforeAllTestRuns() {
+        config = TestEnv.GET();
         modes = config.getTransportModes();
-    }
-
-    @AfterAll
-    static void onceAfterAllTestsRun() throws IOException {
-        TestEnv.clearDataCache(componentContainer);
-        componentContainer.close();
-        TestEnv.deleteDBIfPresent(config);
     }
 
     @BeforeEach
     void beforeEachTestRuns() {
-        transportData = (TramTransportDataForTestFactory.TramTransportDataForTest) componentContainer.get(TransportData.class);
-        stationLocations = componentContainer.get(StationLocations.class);
-        compositeStationRepository = componentContainer.get(StationGroupsRepository.class);
+        NaptanRepository naptanRepository = createMock(NaptanRepository.class);
+        NPTGRepository nptgRepository = createMock(NPTGRepository.class);
+        ProvidesNow providesNow = new ProvidesLocalNow();
+        GraphFilter graphFilter = new IncludeAllFilter();
+
+        EasyMock.expect(naptanRepository.isEnabled()).andStubReturn(true);
+
+        TramTransportDataForTestFactory factory = new TramTransportDataForTestFactory(providesNow);
+        factory.start();
+
+        transportData = factory.getTestData();
+
+        stationLocations = new StationLocations(transportData, transportData, naptanRepository, new Geography(config));
+        compositeStationRepository = new StationGroupsRepository(transportData, config, nptgRepository, naptanRepository, graphFilter);
     }
 
     @Disabled("Need way to inject naptan test data here")
@@ -66,7 +69,10 @@ public class StationLocationsFromTestDataTest {
         assertEquals(1, results.size(), results.toString());
 
         // fallback name, no naptan area data loaded
+        replayAll();
+        compositeStationRepository.start();
         assertEquals(compositeStationRepository.findByName("Id{'area1'}"), results.get(0));
+        verifyAll();
     }
 
     @Disabled("Need way to inject naptan test data here")
@@ -74,42 +80,55 @@ public class StationLocationsFromTestDataTest {
     void shouldFindFourthStation() {
         List<Station> results = stationLocations.nearestStationsSorted(nearKnutsfordBusStation.location(), 3,
                 MarginInMeters.ofMeters(1000), modes);
+        replayAll();
         assertEquals(1, results.size(), results.toString());
 
         // fallback name, no naptan area data loaded
-        assertEquals(compositeStationRepository.findByName("Id{'area4'}"), results.get(0));
+        assertEquals(compositeStationRepository.findByName("Id{'area4'}"), results.getFirst());
+        verifyAll();
     }
 
     @Test
     void shouldFindSecondStation() {
+        replayAll();
+//        stationLocations.start();
+
         List<Station> results = stationLocations.nearestStationsSorted(nearWythenshaweHosp.location(), 3,
                 MarginInMeters.ofMeters(500), modes);
+
         assertEquals(1, results.size(), results.toString());
         assertTrue(results.contains(transportData.getSecond()));
+        verifyAll();
     }
 
     @Test
     void shouldFindLastStation() {
+        replayAll();
         List<Station> results = stationLocations.nearestStationsSorted(nearPiccGardens.location(), 3,
                 MarginInMeters.ofMeters(500), modes);
         assertEquals(1, results.size(), results.toString());
         assertTrue(results.contains(transportData.getLast()));
+        verifyAll();
     }
 
     @Test
     void shouldFindInterchange() {
+        replayAll();
         List<Station> results = stationLocations.nearestStationsSorted(nearShudehill.location(), 3,
                 MarginInMeters.ofMeters(500), modes);
         assertEquals(1, results.size(), results.toString());
         assertTrue(results.contains(transportData.getInterchange()));
+        verifyAll();
     }
 
     @Test
     void shouldFindNearStockport() {
+        replayAll();
         List<Station> results = stationLocations.nearestStationsSorted(nearStockportBus.location(), 3,
                 MarginInMeters.ofMeters(500), modes);
         assertEquals(1, results.size(), results.toString());
         assertTrue(results.contains(transportData.getFifthStation()));
+        verifyAll();
     }
 
 }
